Refactor index.html to eliminate redundancy
Removed duplicate HTML structure and ensured proper formatting.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
     <title>CognitiveCart</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body><!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>CognitiveCart</title>
-    <link rel="stylesheet" href="style.css">
-</head>
 <body>
 
 <div class="container">
@@ -26,7 +19,7 @@
         <button onclick="searchProduct()">Search</button>
     </div>
 
-    <!-- SECTIONS -->
+    <!-- DASHBOARD -->
     <div id="dashboard" class="dashboard hidden">
 
         <section>
@@ -45,26 +38,9 @@
         </section>
 
     </div>
+
 </div>
 
 <script src="script.js"></script>
 </body>
 </html>
-
-
-    <div class="container">
-        <h1>🛒 CognitiveCart</h1>
-        <p class="tagline">Find the best deal across platforms instantly</p>
-
-        <div class="search-box">
-            <input type="text" id="productInput" placeholder="Enter product name...">
-            <button onclick="searchProduct()">Search</button>
-        </div>
-
-        <div id="results" class="results"></div>
-    </div>
-
-<script src="script.js"></script>
-</body>
-</html>
-
